--- a/wp-time-slots-booking-form/languages/wp-time-slots-booking-form-de_DE.po
+++ b/wp-time-slots-booking-form/languages/wp-time-slots-booking-form-de_DE.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plugins - WP Time Slots Booking Form - Development (trunk)\n"
 "POT-Creation-Date: 2020-07-07 01:35+0200\n"
-"PO-Revision-Date: 2024-07-12 12:44+0200\n"
+"PO-Revision-Date: 2025-01-08 17:14+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -12,7 +12,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
-"X-Generator: Poedit 3.3.1\n"
+"X-Generator: Poedit 3.5\n"
 
 #: addons/applimit.addon.php:127
 msgid "The add-on adds support for limiting the number of appointments per user"
@@ -2050,3 +2050,6 @@ msgstr ""
 
 msgid "Please select a quantity"
 msgstr ""
+
+msgid "Pay later"
+msgstr "spätere Zahlung (auf Rechnung)"
