--- a/wp-time-slots-booking-form/languages/wp-time-slots-booking-form-es_ES.po
+++ b/wp-time-slots-booking-form/languages/wp-time-slots-booking-form-es_ES.po
@@ -757,3 +757,6 @@ msgstr "Cancelar Reserva"
 
 msgid "Incorrect verification code"
 msgstr "Código de verificación incorrecto"
+
+msgid "Pay later"
+msgstr ""
