--- a/wp-time-slots-booking-form/languages/wp-time-slots-booking-form-ES.po
+++ b/wp-time-slots-booking-form/languages/wp-time-slots-booking-form-ES.po
@@ -2,18 +2,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: WP Time Slots Booking Form\n"
 "POT-Creation-Date: 2019-01-26 14:54+0100\n"
-"PO-Revision-Date: 2024-07-12 12:51+0200\n"
+"PO-Revision-Date: 2024-07-13 14:19+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: es_ES\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-Basepath: ..\n"
 "X-Generator: Poedit 3.3.1\n"
-"X-Poedit-Basepath: C:/TORRE_F/WorkII/Developers4Web/DWBooster.wordpress/components/Contact Form "
-"to Email/free/contact-form-to-email/languages\n"
 "X-Poedit-KeywordsList: _e;__;gettext\n"
 "X-Poedit-SearchPath-0: .\n"
 
@@ -763,3 +761,6 @@ msgstr "Cancelar Reserva"
 
 msgid "Incorrect verification code"
 msgstr "Código de verificación incorrecto"
+
+msgid "Pay later"
+msgstr ""
